style: fix dropdown item hover on dark mode

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -311,6 +311,11 @@ textarea.wiki-content {
 		
 		.dropdown-item {
 			color: var(--text-color);
+
+		}
+
+		.dropdown-item:hover {
+			color: var(--background-color);
 		}
 	}
 	
